# arcane

./: .dockerignore  .gitattributes  .gitignore  ARCANE_OPS.md  Cargo.toml  Dockerfile  LICENSE  PROJECT_STATUS.md  QUICKSTART.md  README.md  ROADMAP.md  compose.yml  do.md  dummy-compose.yaml  repro_cleaner  repro_cleaner.rs  repro_regex.rs  servers.toml  servers.toml.example  servers.toml.micro1  spark.toml
.github/workflows/: main.yml  release.yml
capabilities/: default.json
config/envs/: local.env  micro1.env  micro2.env
docs/: CLI.md  COMPARISON.md  COMPETITIVE_ANALYSIS.md  COMPETITORS.md  COOLIFY_ANALYSIS.md  DEPLOY.md  GITHUB_ACTIONS.md  GUARDIAN.md  INTELLIGENCE.md  KEY_ARCHITECTURE.md  SPARK.md  TEAM_WORKFLOW.md  WHY_ARCANE.md  secrets-management-guide.md
examples/citadel-demo/: compose.yml
examples/feature-test/: Dockerfile  README.md  app.py  docker-compose.yaml
examples/full-stack-demo/: .env  Dockerfile.api  Dockerfile.worker  README.md  api.py  docker-compose.yaml  init.sql  prometheus.yml  worker.py
examples/full-stack-demo/static/: index.html
examples/go-secret-test/: Dockerfile  README.md  docker-compose.yaml  main.go
examples/rust-demo/: .gitignore  Cargo.toml  Dockerfile  compose.yml
examples/rust-demo/src/: main.rs
examples/secrets-demo/: .env  .env.encrypted  .gitattributes  .gitignore  Cargo.toml  Dockerfile
examples/secrets-demo/arcane-keys/backups/: examples_secrets-demo_.env.1766425959.bak.age
examples/secrets-demo/arcane-keys/keys/: machine:age19waa7thx.age  machine:age1nzk0h8ts.age  owner.age
examples/secrets-demo/src/: main.rs
scripts/: run_clean.sh  setup_server.sh  setup_server_traefik.sh
src/: ai_service.rs  auto_gitattributes.rs  auto_gitignore.rs  config.rs  daemon.rs  doctor.rs  file_watcher.rs  git_operations.rs  history.rs  lib.rs  main.rs  rebase_manager.rs  repo_manager.rs  security.rs  shadow.rs  test_ai.rs  tests.rs  timeline.rs  version_manager.rs
src/config/: env.rs
src/ops/: agent.rs  config.rs  deploy.rs  docker.rs  manager.rs  mod.rs  monitor.rs  push.rs  shell.rs  spark.rs  ssh.rs
src/tui/: app.rs  events.rs  mod.rs  ops_view.rs  ui.rs
src/ui/: ops_view.rs
