[package]
name = "arcane"
version = "0.1.28"
edition = "2021"

[workspace]
members = ["."]


[dependencies]
notify-debouncer-mini = "0.4.1"
notify = "6.1.1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for AI
reqwest = { version = "0.11", features = ["json"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"

# Environment variables
dotenv = "0.15"

# Regex for secret scanning
regex = "1.10"

# Time handling
chrono = "0.4"

# Concurrent data structures
dashmap = "5.5"

# Error handling
anyhow = "1.0"

# CLI parsing
clap = { version = "4.0", features = ["derive"] }

# Encryption (Git Seal inspired)
aes = "0.8"
cipher = "0.4"
sha2 = "0.10"
getrandom = "0.2"



# File system operations
home = "0.5"

# Git operations
glob = "0.3"

# Core Utils
age = "0.11.2"
aes-gcm = "0.10.3"
rand = "0.9.2"
dirs = "6.0.0"
zeroize = { version = "1.8.2", features = ["derive"] }
keyring = "3.6.3"
secrecy = "0.10.3"
ignore = "0.4.25"
uuid = { version = "1.19.0", features = ["v4"] }
ratatui = "0.29.0"
crossterm = "0.29.0"
ansi-to-tui = "7.0.0"

# Arcane Ops Dependencies
bollard = "0.15"
russh = "0.40"
russh-keys = "0.40"
futures = "0.3"

